@@ -1,4 +1,5 @@
 HEAD
+    + Added support for proxy and security-mirror in vmbuilder
     + Allow to specify if the host of a web test is an external_host
     + Show output when setup scripts fail
     + Use qcow2 images instead of raw to support snapshots
